chore/checkstyle-fixes: Add more tests