@@ -5,6 +5,9 @@ import com.patternpatrol.model.CheckResult;
 import com.patternpatrol.model.DirectoryRule;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Stream;
@@ -31,8 +34,8 @@ public class DirectoryPatternsServiceTest {
                 Arguments.of("util", DirectoryPattern.LAYERED, null, null, null),
                 Arguments.of("exception", DirectoryPattern.LAYERED, null, null, null),
                 Arguments.of("enums", DirectoryPattern.LAYERED, null, null, null),
-                Arguments.of("test", DirectoryPattern.LAYERED, null, null, Set.of("test")),
-                Arguments.of("test", DirectoryPattern.LAYERED, null, null, Set.of("test"))
+                Arguments.of("test", DirectoryPattern.LAYERED, null, null, Collections.unmodifiableSet(new HashSet<>(Arrays.asList("test")))),
+                Arguments.of("test", DirectoryPattern.LAYERED, null, null, Collections.unmodifiableSet(new HashSet<>(Arrays.asList("test"))))
         );
     }
 
@@ -43,7 +46,7 @@ public class DirectoryPatternsServiceTest {
                 Arguments.of("whatever", DirectoryPattern.LAYERED, null, null, null),
                 Arguments.of("feature", DirectoryPattern.LAYERED, null, null, null),
                 Arguments.of("patternpatrol", DirectoryPattern.LAYERED, null, null, null),
-                Arguments.of("test", DirectoryPattern.LAYERED, null, null, Set.of("notTest"))
+                Arguments.of("test", DirectoryPattern.LAYERED, null, null, Collections.unmodifiableSet(new HashSet<>(Arrays.asList("notTest"))))
         );
     }
 
@@ -57,7 +60,7 @@ public class DirectoryPatternsServiceTest {
             Set<String> ignore) {
 
         // Given
-        Set<String> fileNames = Set.of(fileName);
+        Set<String> fileNames = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(fileName)));
         DirectoryRule directoryRule = new DirectoryRule();
         directoryRule.setPatternArg(arg);
         directoryRule.setPatternArgs(args);
@@ -83,7 +86,7 @@ public class DirectoryPatternsServiceTest {
             Set<String> ignore) {
 
         // Given
-        Set<String> fileNames = Set.of(fileName);
+        Set<String> fileNames = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(fileName)));
         DirectoryRule directoryRule = new DirectoryRule();
         directoryRule.setPatternArg(arg);
         directoryRule.setPatternArgs(args);
